--- a/src/1-Intro/ch1-lit_review.tex
+++ b/src/1-Intro/ch1-lit_review.tex
@@ -22,3 +22,6 @@ Machine learning algorithms automate the process of analytical model building, u
 \input{src/1-Intro/1-2_model-image-registraion/image-processing.tex}
 \subsection{Image Similarity Metrics}
 \input{src/1-Intro/1-2_model-image-registraion/image-similarity-metrics.tex}
+
+\section{Deep Learning for Image Processing in Orthopaedics}
+\input{src/1-Intro/1-3_machine-learning/1-3_ml}
