--- a/src/myBib.bib
+++ b/src/myBib.bib
@@ -832,6 +832,21 @@
   file = {C\:\\Users\\ajensen123\\Zotero\\storage\\M5R7WJL7\\Corke_2017_Robotics, Vision and Control.pdf}
 }
 
+@article{coxNeuralNetworksNeuroscienceInspired2014,
+  title = {Neural {{Networks}} and {{Neuroscience-Inspired Computer Vision}}},
+  author = {Cox, David~Daniel and Dean, Thomas},
+  year = {2014},
+  month = sep,
+  journal = {Current Biology},
+  volume = {24},
+  number = {18},
+  pages = {R921-R929},
+  issn = {09609822},
+  doi = {10.1016/j.cub.2014.08.026},
+  langid = {english},
+  file = {C\:\\Users\\ajensen123\\Zotero\\storage\\43VJ9KMN\\Cox and Dean - 2014 - Neural Networks and Neuroscience-Inspired Computer.pdf}
+}
+
 @book{craneKinematicAnalysisRobot2008,
   title = {Kinematic Analysis of Robot Manipulators},
   author = {Crane, Carl D. and Duffy, Joseph},
@@ -1393,6 +1408,20 @@
   file = {C\:\\Users\\ajensen123\\Zotero\\storage\\NVUP5586\\golub-loan_matrix-computations.pdf}
 }
 
+@book{goodfellowDeepLearning2016,
+  title = {Deep Learning},
+  author = {Goodfellow, Ian and Bengio, Yoshua and Courville, Aaron},
+  year = {2016},
+  series = {Adaptive Computation and Machine Learning},
+  publisher = {{The MIT Press}},
+  address = {{Cambridge, Massachusetts}},
+  isbn = {978-0-262-03561-3},
+  langid = {english},
+  lccn = {Q325.5 .G66 2016},
+  keywords = {Machine learning},
+  file = {C\:\\Users\\ajensen123\\Zotero\\storage\\5PPQN3M4\\Goodfellow et al. - 2016 - Deep learning.pdf}
+}
+
 @article{goodfellowGenerativeAdversarialNets,
   title = {Generative {{Adversarial Nets}}},
   author = {Goodfellow, Ian and {Pouget-Abadie}, Jean and Mirza, Mehdi and Xu, Bing and {Warde-Farley}, David and Ozair, Sherjil and Courville, Aaron and Bengio, Yoshua},
@@ -1838,6 +1867,22 @@
   file = {C\:\\Users\\ajensen123\\Zotero\\storage\\DHM2MQMT\\Kaptein et al. - 2011 - A comparison of calibration methods for stereo flu.pdf}
 }
 
+@article{kapteinEvaluationThreePose2004,
+  title = {Evaluation of Three Pose Estimation Algorithms for Model-Based {{Roentgen}} Stereophotogrammetric Analysis},
+  author = {Kaptein, B L and R Valstar, E and Stoel, B C and Rozing, P M and Reiber, J H C},
+  year = {2004},
+  month = apr,
+  journal = {Proceedings of the Institution of Mechanical Engineers, Part H: Journal of Engineering in Medicine},
+  volume = {218},
+  number = {4},
+  pages = {231--238},
+  issn = {0954-4119, 2041-3033},
+  doi = {10.1243/0954411041561036},
+  abstract = {Model-based roentgen stereophotogrammetric analysis (RSA) uses a three-dimensional surface model of an implant in order to estimate accurately the pose of that implant from a stereo pair of roentgen images. The technique is based on minimization of the difference between the actually projected contour of an implant and the virtually projected contour of a model of that same implant. The advantage of model-based RSA over conventional marker-based RSA is that it is not necessary to attach markers to the implant. In this paper, three pose estimation algorithms for model-based RSA are evaluated. The algorithms were assessed on the basis of their sensitivities to noise in the actual contour, to the amount of drop-outs in the actual contour, to the number of points in the actual contour and to shrinkage or expansion of the actual contour. The algorithms that were studied are the iterative inverse perspective matching (IIPM ) algorithm, an algorithm based on minimization of the difference (DIF ) between the actual contour and the virtual contour, and an algorithm based on minimization of the non-overlapping area (NOA) between the actual and virtual contour. The results of the simulation and phantom experiments show that the NOA algorithm does not fulfil the high accuracy that is necessary for model-based RSA. The IIPM and DIF algorithms are robust to the different distortions, making model-based RSA a possible replacement for marker-based RSA.},
+  langid = {english},
+  file = {C\:\\Users\\ajensen123\\Zotero\\storage\\L5DXFKSI\\Kaptein et al. - 2004 - Evaluation of three pose estimation algorithms for.pdf}
+}
+
 @article{kapteinNewModelbasedRSA2003,
   ids = {bartl.kapteinNewModelbasedRSA2003},
   title = {A New Model-Based {{RSA}} Method Validated Using {{CAD}} Models and Models from Reversed Engineering},
@@ -1857,6 +1902,22 @@
   file = {C\:\\Users\\ajensen123\\Zotero\\storage\\LHIHJVKM\\Kaptein et al. - 2003 - A new model-based RSA method validated using CAD m.pdf}
 }
 
+@article{kapteinNewModelbasedRSA2003a,
+  title = {A New Model-Based {{RSA}} Method Validated Using {{CAD}} Models and Models from Reversed Engineering},
+  author = {Kaptein, B.L. and Valstar, E.R. and Stoel, B.C. and Rozing, P.M. and Reiber, J.H.C.},
+  year = {2003},
+  month = jun,
+  journal = {Journal of Biomechanics},
+  volume = {36},
+  number = {6},
+  pages = {873--882},
+  issn = {00219290},
+  doi = {10.1016/S0021-9290(03)00002-2},
+  abstract = {Roentgen stereophotogrammetric analysis (RSA) was developed to measure micromotion of an orthopaedic implant with respect to its surrounding bone. A disadvantage of conventional RSA is that it requires the implant to be marked with tantalum beads. This disadvantage can potentially be resolved with model-based RSA, whereby a 3D model of the implant is used for matching with the actual images and the assessment of position and rotation of the implant. In this study, a model-based RSA algorithm is presented and validated in phantom experiments. To investigate the influence of the accuracy of the implant models that were used for modelbased RSA, we studied both computer aided design (CAD) models as well as models obtained by means of reversed engineering (RE) of the actual implant.},
+  langid = {english},
+  file = {C\:\\Users\\ajensen123\\Zotero\\storage\\ZYDE83BU\\Kaptein et al. - 2003 - A new model-based RSA method validated using CAD m.pdf}
+}
+
 @article{karnutaArtificialIntelligenceIdentify2021,
   title = {Artificial {{Intelligence}} to {{Identify Arthroplasty Implants From Radiographs}} of the {{Knee}}},
   author = {Karnuta, Jaret M. and Luu, Bryan C. and Roth, Alexander L. and Haeberle, Heather S. and Chen, Antonia F. and Iorio, Richard and Schaffer, Jonathan L. and Mont, Michael A. and Patterson, Brendan M. and Krebs, Viktor E. and Ramkumar, Prem N.},
@@ -1870,7 +1931,7 @@
   doi = {10.1016/j.arth.2020.10.021},
   abstract = {Background: Revisions and reoperations for patients who have undergone total knee arthroplasty (TKA), unicompartmental knee arthroplasty (UKA), and distal femoral replacement (DFR) necessitates accurate identification of implant manufacturer and model. Failure risks delays in care, increased morbidity, and further financial burden. Deep learning permits automated image processing to mitigate the challenges behind expeditious, cost-effective preoperative planning. Our aim was to investigate whether a deeplearning algorithm could accurately identify the manufacturer and model of arthroplasty implants about the knee from plain radiographs. Methods: We trained, validated, and externally tested a deep-learning algorithm to classify knee arthroplasty implants from one of 9 different implant models from retrospectively collected anteriorposterior (AP) plain radiographs from four sites in one quaternary referral health system. The performance was evaluated by calculating the area under the receiver-operating characteristic curve (AUC), sensitivity, specificity, and accuracy when compared with a reference standard of implant model from operative reports. Results: The training and validation data sets were comprised of 682 radiographs across 424 patients and included a wide range of TKAs from the four leading implant manufacturers. After 1000 training epochs by the deep-learning algorithm, the model discriminated nine implant models with an AUC of 0.99, accuracy 99\%, sensitivity of 95\%, and specificity of 99\% in the external-testing data set of 74 radiographs. Conclusions: A deep learning algorithm using plain radiographs differentiated between 9 unique knee arthroplasty implants from four manufacturers with near-perfect accuracy. The iterative capability of the algorithm allows for scalable expansion of implant discriminations and represents an opportunity in delivering cost-effective care for revision arthroplasty.},
   langid = {english},
-  keywords = {📥},
+  keywords = {📥,Classification,Convolutional Neural Network,Deep Learning,Implant Classification,Machine Learning,Neural Network,Total Knee Arthroplasty},
   file = {C\:\\Users\\ajensen123\\Zotero\\storage\\EHESTRTJ\\Karnuta et al. - 2021 - Artificial Intelligence to Identify Arthroplasty I.pdf}
 }
 
@@ -2653,6 +2714,20 @@
   file = {C\:\\Users\\ajensen123\\Zotero\\storage\\2X8NVJ2A\\Martin et al. - 2011 - Model-Based Tracking of the Hip Implications for .pdf}
 }
 
+@article{marzoratiDeep3DConvolutional2020,
+  title = {Deep {{3D Convolutional Networks}} to {{Segment Bones Affected}} by {{Severe Osteoarthritis}} in {{CT Scans}} for {{PSI-Based Knee Surgical Planning}}},
+  author = {Marzorati, Davide and Sarti, Mattia and Mainardi, Luca and Manzotti, Alfonso and Cerveri, Pietro},
+  year = {2020},
+  journal = {IEEE Access},
+  volume = {8},
+  pages = {196394--196407},
+  issn = {2169-3536},
+  doi = {10.1109/ACCESS.2020.3034418},
+  abstract = {Segmentation of bony structures in CT scans is a crucial step in knee arthroplasty based on personalized surgical instruments (PSI). As a matter of fact, the success of the surgery depends on the quality of the matching between the patient-specific resection jigs, manufactured exploiting the patient bony surfaces attained by segmentation, and true patient surfaces. Severe pathological conditions as chronic osteoarthritis, deteriorating the cartilages, narrowing the intra-articular spaces and leading to bone impingement, complicate the segmentation making the recognition of bony boundaries sub-optimal for traditional semi-automated methods and often extremely difficult even for expert radiologists. Deep convolutional neural networks (CNNs) have been investigated in the last years towards automatic labeling of diagnostic images, especially harnessing the encoding-decoding U-Net architecture. In this article, we implemented deep CNNs to encompass the concurrent segmentation of the distal femur and the proximal tibia in CT images and evaluate how segmentation uncertainty may impact on the surgical planning. A retrospective set of 200 knee CT scans of patients was used to train the network and test the segmentation performances. Tests on a subset of 20 scans provided median dice, sensitivity and positive predictive value indices greater than 96\% for both shapes, with median 3D reconstruction error in the range of 0.5mm. Median 3D errors on both PSI femoral and tibial contact areas and surgical cut alignments were less than 2mm and 2{$\smwhtcircle$}, respectively, which can be considered clinically acceptable. These results substantiate that deep CNN architectures can disclose the opportunity of segmenting bone shapes in CT scans for PSI-based surgical planning with promising accuracy. However, we observed that segmentation scores alone cannot be taken as representative of the 3D errors at the contact areas of the PSI. Therefore when comparing segmentation algorithms of PSI-based surgical planning the 3D errors should be explicitly analyzed.},
+  langid = {english},
+  file = {C\:\\Users\\ajensen123\\Zotero\\storage\\5GCVZRZL\\Marzorati et al. - 2020 - Deep 3D Convolutional Networks to Segment Bones Af.pdf}
+}
+
 @article{matsukiDynamicVivoGlenohumeral2012,
   title = {Dynamic {{In Vivo Glenohumeral Kinematics During Scapular Plane Abduction}} in {{Healthy Shoulders}}},
   author = {Matsuki, Keisuke and Matsuki, Kei O. and Yamaguchi, Satoshi and Ochiai, Nobuyasu and Sasho, Takahisa and Sugaya, Hiroyuki and Toyone, Tomoaki and Wada, Yuichi and Takahashi, Kazuhisa and Banks, Scott A.},
@@ -2753,6 +2828,23 @@
   abstract = {Although total knee arthroplasty is a successful and well-established surgical intervention, there is renewed interest in evaluating its theoretical underpinning and surgical techniques in order to identify areas for potential improvement in patient outcomes.},
   langid = {english},
   file = {C\:\\Users\\ajensen123\\Zotero\\storage\\KUZWF2S2\\Mercuri et al. - 2019 - Gap Balancing, Measured Resection, and Kinematic A.pdf}
+}
+
+@article{mohammadiProjectionNeuralNetwork2020,
+  title = {A {{Projection Neural Network}} for the {{Generalized Lasso}}},
+  author = {Mohammadi, Majid},
+  year = {2020},
+  month = jun,
+  journal = {IEEE Transactions on Neural Networks and Learning Systems},
+  volume = {31},
+  number = {6},
+  pages = {2217--2221},
+  issn = {2162-237X, 2162-2388},
+  doi = {10.1109/TNNLS.2019.2927282},
+  abstract = {The generalized lasso (GLasso) is an extension of the lasso regression in which there is an l1 penalty term (or regularization) of the linearly transformed coefficient vector. Finding the optimal solution of GLasso is not straightforward since the penalty term is not differentiable. This brief presents a novel one-layer neural network to solve the generalized lasso for a wide range of penalty transformation matrices. The proposed neural network is proven to be stable in the sense of Lyapunov and converges globally to the optimal solution of the GLasso. It is also shown that the proposed neural solution can solve many optimization problems, including sparse and weighted sparse representations, (weighted) total variation denoising, fused lasso signal approximator, and trend filtering. Disparate experiments on the above problems illustrate and confirm the excellent performance of the proposed neural network in comparison to other competing techniques.},
+  langid = {english},
+  keywords = {LASSO,Least Squares,Neural Network,Recurrent Neural Network},
+  file = {C\:\\Users\\ajensen123\\Zotero\\storage\\YRX9IU2A\\Mohammadi - 2020 - A Projection Neural Network for the Generalized La.pdf}
 }
 
 @article{mooreDigitalDatabaseWrist2007,
@@ -3072,6 +3164,21 @@
   langid = {english},
   keywords = {📥},
   file = {C\:\\Users\\ajensen123\\Zotero\\storage\\5X4Y4NEZ\\Pinto et al. - 2018 - Iris Flower Species Identification Using Machine L.pdf}
+}
+
+@article{polceMachineLearningPredicts2021,
+  title = {Machine {{Learning Predicts Femoral}} and {{Tibial Implant Size Mismatch}} for {{Total Knee Arthroplasty}}},
+  author = {Polce, Evan M. and Kunze, Kyle N. and Paul, Katlynn M. and Levine, Brett R.},
+  year = {2021},
+  month = apr,
+  journal = {Arthroplasty Today},
+  volume = {8},
+  pages = {268-277.e2},
+  issn = {23523441},
+  doi = {10.1016/j.artd.2021.01.006},
+  abstract = {Background: Despite reasonable accuracy with preoperative templating, the search for an optimal planning tool remains an unsolved dilemma. The purpose of the present study was to apply machine learning (ML) using preoperative demographic variables to predict mismatch between templating and final component size in primary total knee arthroplasty (TKA) cases. Methods: This was a retrospective case-control study of primary TKA patients between September 2012 and April 2018. The primary outcome was mismatch between the templated and final implanted component sizes extracted from the operative database. The secondary outcome was mismatch categorized as undersized and oversized. Five supervised ML algorithms were trained using 6 demographic features. Prediction accuracies were obtained as a metric of performance for binary mismatch (yes/no) and multilevel (undersized/correct/oversized) classifications. Results: A total of 1801 patients were included. For binary classification, the best-performing algorithm for predicting femoral and tibial mismatch was the stochastic gradient boosting model (area under the curve: 0.76/0.72, calibration intercepts: 0.05/0.05, calibration slopes: 0.55/0.7, and Brier scores: 0.20/0.21). For multiclass classification, the best-performing algorithms had accuracies of 83.9\% and 82.9\% for predicting the concordance/mismatch of the femoral and tibial implant, respectively. Model predictions of greater than 51.0\% and 47.9\% represented high-risk thresholds for femoral and tibial sizing mismatch, respectively. Conclusions: ML algorithms predicted templating mismatch with good accuracy. External validation is necessary to confirm the performance and reliability of these algorithms. Predicting sizing mismatch is the first step in using ML to aid in the prediction of final TKA component sizes. Further studies to optimize parameters and predictions for the algorithms are ongoing.},
+  langid = {english},
+  file = {C\:\\Users\\ajensen123\\Zotero\\storage\\8PN9JS2H\\Polce et al. - 2021 - Machine Learning Predicts Femoral and Tibial Impla.pdf}
 }
 
 @article{postolkaEvaluationIntensitybasedAlgorithm2020,
@@ -3460,6 +3567,24 @@
   langid = {english},
   keywords = {📥},
   file = {C\:\\Users\\ajensen123\\Zotero\\storage\\6F559D79\\Schmidt et al. - 2003 - Fluoroscopic Analyses of Cruciate-Retaining and Me.pdf}
+}
+
+@article{schulzDeepLearningLayerWise2012,
+  title = {Deep {{Learning}}: {{Layer-Wise Learning}} of {{Feature Hierarchies}}},
+  shorttitle = {Deep {{Learning}}},
+  author = {Schulz, Hannes and Behnke, Sven},
+  year = {2012},
+  month = nov,
+  journal = {KI - K\"unstliche Intelligenz},
+  volume = {26},
+  number = {4},
+  pages = {357--363},
+  issn = {0933-1875, 1610-1987},
+  doi = {10.1007/s13218-012-0198-z},
+  abstract = {Hierarchical neural networks for object recognition have a long history. In recent years, novel methods for incrementally learning a hierarchy of features from unlabeled inputs were proposed as good starting point for supervised training. These deep learning methods\textemdash together with the advances of parallel computers\textemdash made it possible to successfully attack problems that were not practical before, in terms of depth and input size. In this article, we introduce the reader to the basic concepts of deep learning, discuss selected methods in detail, and present application examples from computer vision and speech recognition.},
+  langid = {english},
+  keywords = {Deep Learning,Machine Learning,Neural Network,Segmentation},
+  file = {C\:\\Users\\ajensen123\\Zotero\\storage\\VX6JNKGJ\\Schulz and Behnke - 2012 - Deep Learning Layer-Wise Learning of Feature Hier.pdf}
 }
 
 @article{scottCanTotalKnee2016,
@@ -4047,6 +4172,23 @@
   file = {C\:\\Users\\ajensen123\\Zotero\\storage\\FNBUSDU3\\Varadarajan et al. - 2008 - In vivo contact kinematics and contact forces of t.pdf}
 }
 
+@misc{vaswaniAttentionAllYou2017,
+  title = {Attention {{Is All You Need}}},
+  author = {Vaswani, Ashish and Shazeer, Noam and Parmar, Niki and Uszkoreit, Jakob and Jones, Llion and Gomez, Aidan N. and Kaiser, Lukasz and Polosukhin, Illia},
+  year = {2017},
+  month = dec,
+  number = {arXiv:1706.03762},
+  eprint = {1706.03762},
+  eprinttype = {arxiv},
+  primaryclass = {cs},
+  publisher = {{arXiv}},
+  abstract = {The dominant sequence transduction models are based on complex recurrent or convolutional neural networks that include an encoder and a decoder. The best performing models also connect the encoder and decoder through an attention mechanism. We propose a new simple network architecture, the Transformer, based solely on attention mechanisms, dispensing with recurrence and convolutions entirely. Experiments on two machine translation tasks show these models to be superior in quality while being more parallelizable and requiring significantly less time to train. Our model achieves 28.4 BLEU on the WMT 2014 Englishto-German translation task, improving over the existing best results, including ensembles, by over 2 BLEU. On the WMT 2014 English-to-French translation task, our model establishes a new single-model state-of-the-art BLEU score of 41.8 after training for 3.5 days on eight GPUs, a small fraction of the training costs of the best models from the literature. We show that the Transformer generalizes well to other tasks by applying it successfully to English constituency parsing both with large and limited training data.},
+  archiveprefix = {arXiv},
+  langid = {english},
+  keywords = {Computer Science,Computer Science - Computation and Language,Computer Science - Machine Learning,Machine Learning,Natural Language Processing,Transformers},
+  file = {C\:\\Users\\ajensen123\\Zotero\\storage\\6SMV29A6\\Vaswani et al. - 2017 - Attention Is All You Need.pdf}
+}
+
 @article{voneisenhart-rotheNewVivoTechnique2007,
   title = {A New in Vivo Technique for Determination of Femoro-Tibial and Femoro-Patellar {{3D}} Kinematics in Total Knee Arthroplasty},
   author = {{von Eisenhart-Rothe}, R. and Vogl, T. and Englmeier, K.-H. and Graichen, H.},
@@ -4111,6 +4253,22 @@
   langid = {english},
   keywords = {📥},
   file = {C\:\\Users\\ajensen123\\Zotero\\storage\\X5TYNWMX\\Wallace and Wintz - 1980 - An efficient three-dimensional aircraft recognitio.pdf}
+}
+
+@article{wangDeep3DHuman2021,
+  title = {Deep {{3D}} Human Pose Estimation: {{A}} Review},
+  shorttitle = {Deep {{3D}} Human Pose Estimation},
+  author = {Wang, Jinbao and Tan, Shujie and Zhen, Xiantong and Xu, Shuo and Zheng, Feng and He, Zhenyu and Shao, Ling},
+  year = {2021},
+  month = sep,
+  journal = {Computer Vision and Image Understanding},
+  volume = {210},
+  pages = {103225},
+  issn = {10773142},
+  doi = {10.1016/j.cviu.2021.103225},
+  abstract = {Three-dimensional (3D) human pose estimation involves estimating the articulated 3D joint locations of a human body from an image or video. Due to its widespread applications in a great variety of areas, such as human motion analysis, human\textendash computer interaction, robots, 3D human pose estimation has recently attracted increasing attention in the computer vision community, however, it is a challenging task due to depth ambiguities and the lack of in-the-wild datasets. A large number of approaches, with many based on deep learning, have been developed over the past decade, largely advancing the performance on existing benchmarks. To guide future development, a comprehensive literature review is highly desired in this area. However, existing surveys on 3D human pose estimation mainly focus on traditional methods and a comprehensive review on deep learning based methods remains lacking in the literature. In this paper, we provide a thorough review of existing deep learning based works for 3D pose estimation, summarize the advantages and disadvantages of these methods and provide an in-depth understanding of this area. Furthermore, we also explore the commonly-used benchmark datasets on which we conduct a comprehensive study for comparison and analysis. Our study sheds light on the state of research development in 3D human pose estimation and provides insights that can facilitate the future design of models and algorithms.},
+  langid = {english},
+  file = {C\:\\Users\\ajensen123\\Zotero\\storage\\LDACXZ2K\\Wang et al. - 2021 - Deep 3D human pose estimation A review.pdf}
 }
 
 @article{wangDeepHighResolutionRepresentation2020,
@@ -4214,6 +4372,14 @@
   langid = {english},
   keywords = {📥,Animal Pose Tracking,Deep Learning,Neural Network,Pose Estimation},
   file = {C\:\\Users\\ajensen123\\Zotero\\storage\\TNIA972K\\Wu et al. - 2020 - Deep Graph Pose a semi-supervised deep graphical .pdf}
+}
+
+@article{wunschRegistrationCADMOEls,
+  title = {Registration of {{CAD-MO}} Els to {{Images}} by {{Iterative Inverse Perspective Matching}}},
+  author = {Wunsch, P and Hirzinger, G},
+  abstract = {A new algorithmfor registering a 3-0 model to a single or a sequence of two-dimensional images without a-priori knowledge of correspondences is presented. The algorithm is composed of two iterated steps, the first of which determines correspondences between imagefeatures and model data, while the second computes the 3 - 0rigid body transformation that minimizes the displacement of matched points. As camera images do not yieldfull 3-0 information, the key idea proposed is to exploit the inverse perspective, ie. the projection ray determined by the focal point of the camera and an image feature point. The inverse perspective yields the constraints for both correspondence search and pose estimation in 3-0 space rather than in the imageplane. This not only simplifies motion parameter estimation but also reduces matching ambiguities due to occlusions. In addition, a robust M-estimation technique reduces the impact of fulse CO rrespondences.},
+  langid = {english},
+  file = {C\:\\Users\\ajensen123\\Zotero\\storage\\FE4G2ZEH\\Wunsch and Hirzinger - Registration of CAD-MO els to Images by Iterative .pdf}
 }
 
 @article{yamaguchiAnkleSubtalarKinematics2009,
