A little bit more about the machine learning section.

--- a/src/1-Intro/1-3_machine-learning/1-3_ml.tex
+++ b/src/1-Intro/1-3_machine-learning/1-3_ml.tex
@@ -5,3 +5,4 @@ Broadly, a neural network is an algorithm
 
 \input{src/1-Intro/1-3_machine-learning/nn-telos.tex}
 \input{src/1-Intro/1-3_machine-learning/neural-network-structure.tex}
+\input{src/1-Intro/1-3_machine-learning/training-neural-networks.tex}
