--- a/src/myBib.bib
+++ b/src/myBib.bib
@@ -3380,6 +3380,21 @@
   file = {C\:\\Users\\ajensen123\\Zotero\\storage\\627TMYGN\\Ronneberger et al_2015_U-Net.pdf}
 }
 
+@article{rumelhartLearningRepresentationsBackpropagating1986,
+  title = {Learning Representations by Back-Propagating Errors},
+  author = {Rumelhart, David E. and Hinton, Geoffrey E. and Williams, Ronald J.},
+  year = {1986},
+  month = oct,
+  journal = {Nature},
+  volume = {323},
+  number = {6088},
+  pages = {533--536},
+  issn = {0028-0836, 1476-4687},
+  doi = {10.1038/323533a0},
+  langid = {english},
+  file = {C\:\\Users\\ajensen123\\Zotero\\storage\\34LAMDGH\\Rumelhartetall_Learning representations by back-propagating.pdf}
+}
+
 @article{russakovskyImageNetLargeScale2015,
   title = {{{ImageNet Large Scale Visual Recognition Challenge}}},
   author = {Russakovsky, Olga and Deng, Jia and Su, Hao and Krause, Jonathan and Satheesh, Sanjeev and Ma, Sean and Huang, Zhiheng and Karpathy, Andrej and Khosla, Aditya and Bernstein, Michael and Berg, Alexander C. and {Fei-Fei}, Li},
