Changed index order

--- a/src/1-Intro/1-3_machine-learning/training-neural-networks.tex
+++ b/src/1-Intro/1-3_machine-learning/training-neural-networks.tex
@@ -45,4 +45,4 @@ In order to determine the gradient at a specific weight, we must consider all th
     \label{eq:chain-rule}
 \end{equation}
 
-One of the main limitations of gradient descent is the need to tune the learning rate. To small a value will cause a network to train extremely slowly and almost always get stuck in local minima. Too large a learning rate can cause the network to ``bounce out'' of the global minima due to the rate of change being too large. Hyperparameter tuning can be a difficult process without a defined methodology beyond trial and error. Some groups have proposed different methods of incorporating dynamically changing update rules in order to incorporate physical properties into the network training stage. 
+One of the main limitations of gradient descent is the need to tune the learning rate. To small a value will cause a network to train extremely slowly and almost always get stuck in local minima. Too large a learning rate can cause the network to ``bounce out'' of the global minima due to the rate of change being too large. Hyperparameter tuning can be a difficult process without a defined methodology beyond trial and error. Some groups have proposed different methods of incorporating dynamically changing update rules in order to incorporate physical properties into the network training stage. The most common is Adaptive Moment Estimation, which incorporates Root Mean Squared Propagation \cite{hinton2012neural} and momentum learning. 
