--- a/src/1-Intro/ch1-lit_review.tex
+++ b/src/1-Intro/ch1-lit_review.tex
@@ -13,15 +13,21 @@ Machine learning algorithms automate the process of analytical model building, u
 \subsection{Kinematics from Fluoroscopy}
 \input{src/1-Intro/1-1_background/kinematics-from-fluoro.tex}
 
-\section{Model-Image Registration}
+\section{Computer Vision Primer}
 \subsection{Geometric Transformations}
-\input{src/1-Intro/1-2_model-image-registraion/geometric-transformations.tex}
+\input{src/1-Intro/1-2_computer-vision-primer/geometric-transformations.tex}
 \subsection{Image Formation and Camera Properties}
-\input{src/1-Intro/1-2_model-image-registraion/image-formation-and-cameras.tex}
+\input{src/1-Intro/1-2_computer-vision-primer/image-formation-and-cameras.tex}
 \subsection{Image Processing}
-\input{src/1-Intro/1-2_model-image-registraion/image-processing.tex}
+\input{src/1-Intro/1-2_computer-vision-primer/image-processing.tex}
 \subsection{Image Similarity Metrics}
-\input{src/1-Intro/1-2_model-image-registraion/image-similarity-metrics.tex}
+\input{src/1-Intro/1-2_computer-vision-primer/image-similarity-metrics.tex}
 
 \section{Deep Learning for Image Processing in Orthopaedics}
 \input{src/1-Intro/1-3_machine-learning/1-3_ml}
+
+\section{Model-Image Registration for Measuring Kinematics from Fluoroscopic Images}
+\input{src/1-Intro/1-4_model-image-registration/1-4_model-image-registration.tex}
+
+\section{Automating Measurements of Kinematics from Fluoroscopic Images}
+\input{src/1-Intro/1-5_autonomous-kinematics-measurements/1-5_autonomous-kinematics-measurements.tex}
