--- a/src/myBib.bib
+++ b/src/myBib.bib
@@ -1538,6 +1538,17 @@
   file = {C\:\\Users\\ajensen123\\Zotero\\storage\\2UA43NEU\\He et al. - 2015 - Deep Residual Learning for Image Recognition.pdf}
 }
 
+@article{hinton2012neural,
+  title = {Neural Networks for Machine Learning Lecture 6a Overview of Mini-Batch Gradient Descent},
+  author = {Hinton, Geoffrey and Srivastava, Nitish and Swersky, Kevin},
+  year = {2012},
+  journal = {Cited on},
+  volume = {14},
+  number = {8},
+  pages = {2},
+  file = {C\:\\Users\\ajensen123\\Zotero\\storage\\87MJ5SSA\\Hinton et al_2012_Neural networks for machine learning lecture 6a overview of mini-batch gradient.pdf}
+}
+
 @article{hirokawa3DKinematicEstimation2008,
   title = {A {{3D}} Kinematic Estimation of Knee Prosthesis Using {{X-ray}} Projection Images: Clinical Assessment of the Improved Algorithm for Fluoroscopy Images},
   shorttitle = {A {{3D}} Kinematic Estimation of Knee Prosthesis Using {{X-ray}} Projection Images},
